--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+@plugin "daisyui";
+
 body {
     @apply m-0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
