--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,11 @@
 @import "tailwindcss";
 
-@plugin "daisyui";
+/*@plugin "daisyui" {*/
+/*    themes: light --default, dark --prefersdark, cupcake;*/
+/*}*/
+@plugin "daisyui" {
+    themes: all;
+}
 
 body {
     @apply m-0;
