--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -20,3 +20,7 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.card-body {
+    @apply py-4
+}
