feat: 라이트모드의 `Navbar` 색상 변경
다크보다는 살짝 연하게

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -21,8 +21,8 @@ code {
     monospace;
 }
 
-.navbar-custom {
-    @apply bg-[#15191e] text-white
+html[data-theme="bumblebee"] .navbar {
+    @apply bg-[#252f3b]
 }
 
 .card-body {
